# emc_plusplus

./: README.md
src/: CMakeLists.txt
src/1_deducing_types/: CMakeLists.txt  decltype.cc  deducing_types.cc  move_semantics.cc  reference.cc
